// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering with buttons 1`] = `
Array [
  Object {
    "node": <DirectMessage
      buttons={
        <Sociably.Fragment>
          <UrlButton
            label="foo"
            url="http://sociably.io/foo"
          />
          <UrlButton
            label="bar"
            url="http://sociably.io/bar"
          />
          <UrlButton
            label="baz"
            url="http://sociably.io/baz"
          />
        </Sociably.Fragment>
      }
    >
      Guess one
    </DirectMessage>,
    "path": "$",
    "type": "unit",
    "value": Object {
      "accomplishRequest": [Function],
      "mediaSources": null,
      "request": Object {
        "href": "1.1/direct_messages/events/new.json",
        "method": "POST",
        "parameters": Object {
          "event": Object {
            "message_create": Object {
              "message_data": Object {
                "attachment": undefined,
                "ctas": Array [
                  Object {
                    "label": "foo",
                    "type": "web_url",
                    "url": "http://sociably.io/foo",
                  },
                  Object {
                    "label": "bar",
                    "type": "web_url",
                    "url": "http://sociably.io/bar",
                  },
                  Object {
                    "label": "baz",
                    "type": "web_url",
                    "url": "http://sociably.io/baz",
                  },
                ],
                "text": "Guess one",
              },
              "target": Object {
                "recipient_id": "",
              },
            },
            "type": "message_create",
          },
        },
      },
      "type": "dm",
    },
  },
]
`;

exports[`rendering with coordinates 1`] = `
Array [
  Object {
    "node": <DirectMessage
      coordinates={
        Object {
          "latitude": 25.1,
          "longitude": 121.6,
        }
      }
    />,
    "path": "$",
    "type": "unit",
    "value": Object {
      "accomplishRequest": [Function],
      "mediaSources": null,
      "request": Object {
        "href": "1.1/direct_messages/events/new.json",
        "method": "POST",
        "parameters": Object {
          "event": Object {
            "message_create": Object {
              "message_data": Object {
                "attachment": Object {
                  "location": Object {
                    "shared_coordinate": Object {
                      "coordinates": Object {
                        "coordinates": Array [
                          121.6,
                          25.1,
                        ],
                        "type": "Point",
                      },
                    },
                    "type": "shared_coordinate",
                  },
                  "type": "location",
                },
                "text": undefined,
              },
              "target": Object {
                "recipient_id": "",
              },
            },
            "type": "message_create",
          },
        },
      },
      "type": "dm",
    },
  },
]
`;

exports[`rendering with media 1`] = `
Array [
  Object {
    "node": <DirectMessage
      media={
        <Photo
          mediaId="11111"
        />
      }
    />,
    "path": "$",
    "type": "unit",
    "value": Object {
      "accomplishRequest": [Function],
      "mediaSources": Array [
        Object {
          "id": "11111",
          "parameters": Object {
            "additional_owners": undefined,
            "media_category": undefined,
            "shared": undefined,
          },
          "type": "id",
        },
      ],
      "request": Object {
        "href": "1.1/direct_messages/events/new.json",
        "method": "POST",
        "parameters": Object {
          "event": Object {
            "message_create": Object {
              "message_data": Object {
                "attachment": Object {
                  "media": Object {
                    "id": "",
                  },
                  "type": "media",
                },
                "text": undefined,
              },
              "target": Object {
                "recipient_id": "",
              },
            },
            "type": "message_create",
          },
        },
      },
      "type": "dm",
    },
  },
]
`;

exports[`rendering with placeId 1`] = `
Array [
  Object {
    "node": <DirectMessage
      placeId="12345"
    >
      Hello there
    </DirectMessage>,
    "path": "$",
    "type": "unit",
    "value": Object {
      "accomplishRequest": [Function],
      "mediaSources": null,
      "request": Object {
        "href": "1.1/direct_messages/events/new.json",
        "method": "POST",
        "parameters": Object {
          "event": Object {
            "message_create": Object {
              "message_data": Object {
                "attachment": Object {
                  "location": Object {
                    "shared_place": Object {
                      "place": Object {
                        "id": "12345",
                      },
                    },
                    "type": "shared_place",
                  },
                  "type": "location",
                },
                "text": "Hello there",
              },
              "target": Object {
                "recipient_id": "",
              },
            },
            "type": "message_create",
          },
        },
      },
      "type": "dm",
    },
  },
]
`;

exports[`rendering with plain text 1`] = `
Array [
  Object {
    "node": <DirectMessage>
      Hello World
    </DirectMessage>,
    "path": "$",
    "type": "unit",
    "value": Object {
      "accomplishRequest": [Function],
      "mediaSources": null,
      "request": Object {
        "href": "1.1/direct_messages/events/new.json",
        "method": "POST",
        "parameters": Object {
          "event": Object {
            "message_create": Object {
              "message_data": Object {
                "attachment": undefined,
                "text": "Hello World",
              },
              "target": Object {
                "recipient_id": "",
              },
            },
            "type": "message_create",
          },
        },
      },
      "type": "dm",
    },
  },
]
`;

exports[`rendering with plain text 3`] = `
Array [
  Object {
    "node": <DirectMessage
      customProfileId="11111"
    >
      <foo />
    </DirectMessage>,
    "path": "$",
    "type": "unit",
    "value": Object {
      "accomplishRequest": [Function],
      "mediaSources": null,
      "request": Object {
        "href": "1.1/direct_messages/events/new.json",
        "method": "POST",
        "parameters": Object {
          "event": Object {
            "message_create": Object {
              "custom_profile_id": "11111",
              "message_data": Object {
                "attachment": undefined,
                "text": "foo",
              },
              "target": Object {
                "recipient_id": "",
              },
            },
            "type": "message_create",
          },
        },
      },
      "type": "dm",
    },
  },
]
`;

exports[`rendering with quick replies 1`] = `
Array [
  Object {
    "node": <DirectMessage
      quickReplies={
        <Sociably.Fragment>
          <QuickReply
            description="FOOOOOOO"
            label="foo"
            metadata="FOO"
          />
          <QuickReply
            description="BAAAAAAR"
            label="bar"
            metadata="BAR"
          />
          <QuickReply
            description="BAAAAAAZ"
            label="baz"
            metadata="BAZ"
          />
        </Sociably.Fragment>
      }
    >
      Guess one
    </DirectMessage>,
    "path": "$",
    "type": "unit",
    "value": Object {
      "accomplishRequest": [Function],
      "mediaSources": null,
      "request": Object {
        "href": "1.1/direct_messages/events/new.json",
        "method": "POST",
        "parameters": Object {
          "event": Object {
            "message_create": Object {
              "message_data": Object {
                "attachment": undefined,
                "quick_reply": Object {
                  "options": Array [
                    Object {
                      "description": "FOOOOOOO",
                      "label": "foo",
                      "metadata": "FOO",
                    },
                    Object {
                      "description": "BAAAAAAR",
                      "label": "bar",
                      "metadata": "BAR",
                    },
                    Object {
                      "description": "BAAAAAAZ",
                      "label": "baz",
                      "metadata": "BAZ",
                    },
                  ],
                  "type": "options",
                },
                "text": "Guess one",
              },
              "target": Object {
                "recipient_id": "",
              },
            },
            "type": "message_create",
          },
        },
      },
      "type": "dm",
    },
  },
]
`;
